--- a/package.json
+++ b/package.json
@@ -7,17 +7,19 @@
     "tailwindcss": "^4.0.15"
   },
   "scripts": {
-    "dev": "NODE_ENV=production npx tailwindcss -i ./src/styles.css -o ./public/styles.css --watch"
+    "dev": "NODE_ENV=production npx tailwindcss -i ./src/styles.css -o ./docs/styles.css --watch --minify",
+    "prettier": "npx prettier --write docs/index.html"
   },
   "dependencies": {
     "@tailwindcss/cli": "^4.0.15",
     "@tailwindcss/postcss": "^4.0.15"
   },
   "prettier": {
-    "plugins": ["prettier-plugin-tailwindcss"],
+    "plugins": [
+      "prettier-plugin-tailwindcss"
+    ],
     "singleQuote": true,
     "trailingComma": "all",
     "tailwindStylesheet": "/src/styles.css"
   }
-
 }
